[tool.poetry]
name = "notification_system"
version = "0.1.0"
description = ""
authors = ["Manuel Pascual Luna <manu.pascual.luna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
